bin/Z伝説/log
MergeMidi.java:726: error: ';' expected
	    for (List<TextEvent>list=textEvents.values())
	                                                ^
1 error
